--- a/Android/Hexapod/app/src/main/res/values/strings.xml
+++ b/Android/Hexapod/app/src/main/res/values/strings.xml
@@ -5,5 +5,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_steering">SteeringActivity</string>
+    <string name="title_activity_hello">Hello</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_intro">intro</string>
 
 </resources>
